# FileCompressor

./: CMakeLists.txt  README.md  advancedDetailsWindow.cpp  advancedDetailsWindow.h  advancedDetailsWindow.ui  editorwindow.cpp  editorwindow.h  editorwindow.ui  fileeditor.ui  huffman.cpp  huffman.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
